[package]
authors = ['Setheum Labs<https://github.com/Setheum-Labs>']
description = 'Setheum Elastic Reserve Protocol (SERP) Market Pallet'
edition = '2018'
homepage = 'https://setheum.xyz'
license = 'Apache-2.0 License'
name = 'serp-market'
repository = 'https://github.com/Setheum-Labs/Setheum/'
version = '0.5.0-dev'

[dependencies]
serde = { version = "1.0.123", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
sp-std = { default-features = false, optional = true, version = '3.0.0' }

frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }

#setheum-deps 
stp258-traits = { default-features = false, version = "0.5.0-dev",  git = "https://github.com/Setheum-Labs/stp258-traits" }

funty = { version = "=1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105

num-rational = { default-features = false, version = '0.4.0' }
num-traits = { version = "0.2.14", default-features = false }
fixed = { default-features = false, version = '1.6.0' }

[dev-dependencies]
sp-core = '3.0.0'
sp-runtime = { default-features = false, version = '3.0.0' }
pallet-balances = "3.0.0"

serp-tes = { default-features = false, version = "0.5.0-dev", git = "https://github.com/Setheum-Labs/serp-tes", branch = "general-stable-currencies"}
stp258-currencies = { default-features = false, version = "0.5.0-dev", git = 'https://github.com/Setheum-Labs/stp258' }
stp258-tokens = { default-features = false, version = "0.5.0-dev", git = "https://github.com/Setheum-Labs/stp258-tokens"}

[features]
default = ['std']
std = [
    'codec/std',
    "fixed/std",
    'frame-support/std',
    'frame-system/std',
    "num-rational/std",
	"num-traits/std",
	"serde/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "stp258-currencies/std",
    "stp258-tokens/std",
    "stp258-traits/std",
]
