[package]
name = "serp-market"
version = "0.5.0-dev"
authors = ['Setheum Labs<https://github.com/Setheum-Labs>']
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { default-features = false, optional = true, version = '3.0.0' }

frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
stp258-traits = { default-features = false, version = "0.5.0-dev",  git = "https://github.com/Setheum-Labs/stp258-traits", branch = "new-serp-market" }

funty = { version = "1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105

num-rational = { default-features = false, version = '0.4.0' }
num-traits = { version = "0.2.14", default-features = false }
fixed = { default-features = false, version = '1.6.0' }

[dev-dependencies]
sp-core = "3.0.0"
sp-io = "3.0.0"
pallet-balances = "3.0.0"
stp258-tokens = { default-features = false, version = "0.5.0-dev", git = "https://github.com/Setheum-Labs/stp258-tokens"}

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
    "sp-std/std",
	"frame-support/std",
	"frame-system/std",
    "stp258-traits/std",
]
